--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
   "dependencies": {
     "babel-runtime": "^6.0.0",
     "vue": "^2.5.2",
+    "vuex": "^2.3.1",
     "vue-router": "^3.0.1",
     "fastclick": "^1.0.6",
-    "jsonp": "0.2.1"
+    "jsonp": "0.2.1",
+    "better-scroll": "^0.1.15",
+    "axios": "^0.16.1",
+    "vue-lazyload": "^1.0.3"
   },
   "devDependencies": {
     "autoprefixer": "^7.1.2",
